Stop forge correcting the list config options